--- a/index.html
+++ b/index.html
@@ -29,8 +29,18 @@
     <td>all</td>
     <td>8.1KB</td>
   </tr>
+  <tr>
+    <td><tt><a href="./lks_quadgrab-1.1.1.zip?repository=.%2Findex.json&blender_version_min=4.2.0">lks_quadgrab-1.1.1</a></tt></td>
+    <td>LKS QuadGrab</td>
+    <td>QuadGrab</td>
+    <td><a href="https://github.com/LiamSmyth/LKS_QuadGrab">link</a></td>
+    <td>4.2.0 - ~</td>
+    <td>all</td>
+    <td>all</td>
+    <td>8.2KB</td>
+  </tr>
 </table>
 
-<center><p>Built 2026-02-22, 22:34</p></center>
+<center><p>Built 2026-02-22, 22:47</p></center>
 </body>
 </html>
